# goit-pyweb-hw-09

./: pyproject.toml  readme.md
additional_task/: authors.json  main.py
main_task/: connect.py  models.py  scrapping.py  seed.py
