[tool.poetry]
name = "goit-pyweb-hw-09"
version = "0.1.0"
description = ""
authors = ["Sergii Ternytskyi <serhij86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
mongoengine = "^0.28.2"
pymongo = "^4.8.0"
scrapy = "^2.11.2"
itemadapter = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
